creacion navar y body component v1

--- a/ANGULAR/Hola-Mundo/src/app/app.component.html
+++ b/ANGULAR/Hola-Mundo/src/app/app.component.html
@@ -1,9 +1,3 @@
-<H1>hola mundo</H1>
-<ul>
-    <li>Nombre:{{ nombre }}</li>
-    <li>Apellido:{{ apellido }}</li>
-    <li>Dirección</li>
-    <li>Ciudad</li>
-    <li>Email</li>
-    <li>{{ title }}</li>
-</ul>
+<!-- <app-componente-header></app-componente-header> -->
+<app-header></app-header>
+<app-componente-body></app-componente-body>
