--- a/ANGULAR/Hola-Mundo/src/app/app.component.html
+++ b/ANGULAR/Hola-Mundo/src/app/app.component.html
@@ -1,3 +1,4 @@
 <!-- <app-componente-header></app-componente-header> -->
 <app-header></app-header>
-<app-componente-body></app-componente-body>
+<app-componente-body class="container"></app-componente-body>
+<app-componente-footer></app-componente-footer>
