--- a/ANGULAR/Hola-Mundo/src/styles.css
+++ b/ANGULAR/Hola-Mundo/src/styles.css
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+
+footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: rgb(50, 122, 238);
+    color: white;
+    text-align: center;
+}
