ngIf y ngFOR...DIRECTIVAS

--- a/ANGULAR/Hola-Mundo/src/app/app.component.html
+++ b/ANGULAR/Hola-Mundo/src/app/app.component.html
@@ -1,4 +1,7 @@
 <!-- <app-componente-header></app-componente-header> -->
 <app-header></app-header>
-<app-componente-body class="container"></app-componente-body>
+<div class="container m-5">
+    <app-componente-body></app-componente-body>
+</div>
+
 <app-componente-footer></app-componente-footer>
