--- a/ANGULAR/Hola-Mundo/src/styles.css
+++ b/ANGULAR/Hola-Mundo/src/styles.css
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
-footer {
+
+/* footer {
     position: fixed;
     left: 0;
     bottom: 0;
@@ -8,4 +9,4 @@ footer {
     background-color: rgb(50, 122, 238);
     color: white;
     text-align: center;
-}
+} */
