--- a/ANGULAR/Hola-Mundo/src/app/componentes/componente-body/componente-body.component.html
+++ b/ANGULAR/Hola-Mundo/src/app/componentes/componente-body/componente-body.component.html
@@ -1,99 +1,41 @@
-<!-- <!DOCTYPE html>
-<html>
-
-<body>
-    <h3>A demonstration of how to access a BODY element</h3>
-
-    <p>Click the button to set the background color of the document to red.</p>
-
-    <button onclick="myFunction()">Try it</button>
-
-    <p id="demo"></p>
-
-    <script>
-        function myFunction() {
-            var x = document.getElementsByTagName("BODY")[0];
-            x.style.backgroundColor = "red";
-        }
-    </script>
-</body>
-
-</html>
-
-<p>componente-body works!</p> -->
-
 <!DOCTYPE html>
 <html lang="en">
-<style></style>
-<link rel="stylesheet" href="componente-body.component.css" type="txt/css" />
 
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <!-- <title>Document</title> -->
 </head>
 
 <body>
-    <h1>Grid Elements</h1>
-
-    <p>
-        A Grid Layout must have a parent element with the
-        <em>display</em> property set to <em>grid</em> or <em>inline-grid</em>.
-    </p>
-
-    <p>
-        Direct child element(s) of the grid container automatically becomes grid items.
-    </p>
-    <div class="grid-container">
-        <div class="grid-item">1</div>
-        <div class="grid-item">2</div>
-        <div class="grid-item">3</div>
-        <div class="grid-item">4</div>
-        <div class="grid-item">5</div>
-        <div class="grid-item">6</div>
-        <div class="grid-item">7</div>
-        <div class="grid-item">8</div>
-        <div class="grid-item">9</div>
-    </div>
-    <hr />
-
-    <div class="card-deck">
-        <div class="card">
-            <img src="..." class="card-img-top" alt="..." />
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">
-                    This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
-                </p>
-                <p class="card-text">
-                    <small class="text-muted">Last updated 3 mins ago</small>
-                </p>
+    <div class="container">
+        <form>
+            <div class="row">
+                <div class="col">
+                    <h1>*ngIf</h1>
+                    <hr />
+                    <div *ngIf="mostrar" class="card text-white bg-primary mb-3" style="width: 100%">
+                        <!-- <div class="card-header">Header</div> -->
+                        <div class="card-body">
+                            <h5 class="card-title">Autor: {{ frase.autor }}</h5>
+                            <p class="card-text">Mensaje: {{ frase.mensaje }}</p>
+                        </div>
+                    </div>
+                    <button class="btn btn-outline-primary btn-block" (click)="mostrar = !mostrar">
+              Mostrar/Ocultar
+            </button>
+                </div>
+                <div class="col">
+                    <h1>*ngFor</h1>
+                    <hr />
+                    <ul class="list-group">
+                        <li *ngFor="let personaje of personajes; let i = index" class="list-group-item">
+                            {{ i + 1 }} -{{ personaje }}
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
-        <div class="card">
-            <img src="..." class="card-img-top" alt="..." />
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">
-                    This card has supporting text below as a natural lead-in to additional content.
-                </p>
-                <p class="card-text">
-                    <small class="text-muted">Last updated 3 mins ago</small>
-                </p>
-            </div>
-        </div>
-        <div class="card">
-            <img src="..." class="card-img-top" alt="..." />
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">
-                    This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.
-                </p>
-                <p class="card-text">
-                    <small class="text-muted">Last updated 3 mins ago</small>
-                </p>
-            </div>
-        </div>
+        </form>
     </div>
 </body>
 
