--- a/ANGULAR/spa/src/app/componentes/buscador/buscador.component.html
+++ b/ANGULAR/spa/src/app/componentes/buscador/buscador.component.html
@@ -3,7 +3,17 @@
     Buscador: <small>{{ termino }}</small>
 </h1>
 <hr />
+<div class="row animated fadeIn fast" *ngIf="heroes.length == 0">
+    <div class="col-md-12">
+        <div class="alert alert-info" role="alert">
+            Alerta no se encontro referencia de :{{ termino }}
+        </div>
+    </div>
+</div>
 <div class="card-columns">
+    <app-heroe-tarjeta [heroe]="pie" [indice]="pie.idx" *ngFor="let pie of heroes"></app-heroe-tarjeta>
+</div>
+<!-- <div class="card-columns">
     <div class="card animated fadeIn fast" *ngFor="let heroe of heroes; let i = index">
         <img [src]="heroe.img" class="card-img-top" [alt]="heroe.nombre" />
         <div class="card-body">
@@ -14,12 +24,15 @@
             <p class="card-text">
                 <small class="text-muted">{{ heroe.aparicion }}</small>
             </p>
-            <button (click)="verHeroe(i)" type="button" class="btn btn-outline-primary btn-block">
-        Boton
-      </button>
-            <a [routerLink]="['/infoHeroe', i]" class="btn btn-outline-primary btn-block">
-        Ver link</a
+      
+       
+            >
+            <a [routerLink]="['/heroes']" class="btn btn-outline-success btn-block">Regresar a Héroes</a
       >
     </div>
   </div>
-</div>
+</div> -->
+
+<!-- <button (click)="verHeroe(i)" type="button" class="btn btn-outline-primary btn-block">
+        Boton
+      </button> -->
