--- a/ANGULAR/spa/src/app/componentes/shared/heroes/heroes.component.html
+++ b/ANGULAR/spa/src/app/componentes/shared/heroes/heroes.component.html
@@ -1,22 +1,26 @@
 <h1>Héroes <small>Marvel y DC</small></h1>
 <hr />
 <div class="card-columns">
-    <div class="card animated fadeIn fast" *ngFor="let heroe of heroes; let i = index">
-        <img [src]="heroe.img" class="card-img-top" [alt]="heroe.nombre" />
-        <div class="card-body">
-            <h5 class="card-title">{{ heroe.nombre }}</h5>
-            <p class="card-text">
-                {{ heroe.bio }}
-            </p>
-            <p class="card-text">
-                <small class="text-muted">{{ heroe.aparicion }}</small>
-            </p>
-            <button (click)="verHeroe(i)" type="button" class="btn btn-outline-primary btn-block">
-        Boton
-      </button>
-            <a [routerLink]="['/infoHeroe', i]" class="btn btn-outline-primary btn-block">
-        Ver link</a
-      >
-    </div>
-  </div>
+    <!-- *ngFor="let heroe of heroes; let i = index" -->
+    <app-heroe-tarjeta (heroeSeleccionado)="verHeroe($event)" [heroe]="heroe" [indice]="i" *ngFor="let heroe of heroes; let i = index"></app-heroe-tarjeta>
 </div>
+<!-- PADRE -->
+
+<!-- <div class="card animated fadeIn fast" *ngFor="let heroe of heroes; let i = index">
+            <img [src]="heroe.img" class="card-img-top" [alt]="heroe.nombre" />
+            <div class="card-body">
+                <h5 class="card-title">{{ heroe.nombre }}</h5>
+                <p class="card-text">
+                    {{ heroe.bio }}
+                </p>
+                <p class="card-text">
+                    <small class="text-muted">{{ heroe.aparicion | date }}</small>
+                </p>
+                <button (click)="verHeroe(i)" type="button" class="btn btn-outline-primary btn-block">
+            Boton
+          </button>
+                <a [routerLink]="['/infoHeroe', i]" class="btn btn-outline-primary btn-block">
+            Ver link</a
+          >
+        </div>
+      </div> -->
