--- a/ANGULAR/spa/src/app/componentes/shared/navbar/navbar.component.html
+++ b/ANGULAR/spa/src/app/componentes/shared/navbar/navbar.component.html
@@ -18,9 +18,9 @@
             <li class="nav-item" routerLinkActive="active">
                 <a class="nav-link" [routerLink]="rutaAbout">About</a>
             </li>
-            <li class="nav-item" routerLinkActive="active">
+            <!-- <li class="nav-item" routerLinkActive="active">
                 <a class="nav-link" [routerLink]="rutaInfoHeroe">Información</a>
-            </li>
+            </li> -->
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Dropdown
