configuracion de padre a hijo

--- a/ANGULAR/spa/src/app/componentes/shared/about/about.component.html
+++ b/ANGULAR/spa/src/app/componentes/shared/about/about.component.html
@@ -1,69 +1,91 @@
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-        <div class="carousel-item active">
-            <div class="product">
-                <p class="animated fadeIn fast" class="container">
-                    El caballero de la noche.Batman es un personaje creado por los estadounidenses Bob Kane y Bill Finger, ​ y propiedad de DC Comics. Apareció por primera vez en la historia titulada «El caso del sindicato químico» de la revista Detective Comics N.º 27,
-                    lanzada por la editorial National Publications el 30 de marzo de 1939.
-                    <img src="../../../../assets/imagenes/Llama.jpg" class="d-block w-50 h-10" alt="BATMAN" class="rounded" />
-                </p>
+<body>
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <div class="product" class="container" class="animated fadeIn">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <img src="../../../../assets/imagenes/batman.png" class="d-block w-50 h-10" alt="BATMAN" class="rounded" />
+                        </div>
+                        <div class="col-md-6">
+                            <div class="text-block">
+                                El caballero de la noche.Batman es un personaje creado por los estadounidenses Bob Kane y Bill Finger, ​ y propiedad de DC Comics. Apareció por primera vez en la historia titulada «El caso del sindicato químico» de la revista Detective Comics N.º 27,
+                                lanzada por la editorial National Publications el 30 de marzo de 1939.
+                            </div>
+                            <hr />
+                        </div>
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="carousel-item">
-            <div class="product">
-                <p class="container">
-                    El rey de los mares
-                    <img src="../../../../assets/imagenes/queso-aji.jpg" class="img-logo" alt="..." class="rounded" />
-                </p>
+
+            <div class="carousel-item">
+                <div class="product" class="container" class="animated fadeIn">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <img src="../../../../assets/imagenes/aquaman.png" class="d-block w-75" alt="BATMAN" class="rounded" />
+                        </div>
+                        <div class="col-md-6">
+                            <div class="text-block">
+                                Adaptación acuática-anfibia Telepatía Dominación psiónica de la vida marina,tiene visión en la oscuridad, infravisión, y es electromagnético. Fuerza, agilidad, destreza, velocidad, resistencia y durabilidad sobrehumanas. Resistencia sobrehumana al frío
+                                extremo. Portador del Tridente de Poseidón Herramientas, armas, embarcaciones, y tecnología superiores otorgadas por las razas avanzadas de la Atlántida. Camuflaje submarino Creación y lanzamiento de rayos de "agua dura".
+                            </div>
+                            <hr />
+                        </div>
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="carousel-item">
-            <div class="product">
-                <p class="container">
-                    Tu vecino el hombre araña
-                    <img src="../../../../assets/imagenes/spiderman.png" class="d-block w-75" alt="..." class="rounded" />
-                </p>
+
+            <div class="carousel-item">
+                <div class="product">
+                    <p class="container">
+                        Tu vecino el hombre araña
+                        <img src="../../../../assets/imagenes/spiderman.png" class="d-block w-75" alt="spiderman" class="rounded" />
+                    </p>
+                </div>
+            </div>
+
+            <div class="carousel-item">
+                <div class="product">
+                    <p class="container">
+                        Ping no te saldras con la tuya...
+                        <img src="../../../../assets/imagenes/daredevil.png" class="d-block w-75" alt="dardevil" class="rounded" />
+                    </p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <div class="product">
+                    <p class="container">
+                        Una linterna siempre alumbrara
+                        <img src="../../../../assets/imagenes/linterna-verde.png" class="d-block w-75" alt="linterna" class="rounded" />
+                    </p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <div class="product">
+                    <p class="container">
+                        Jenn volvere por ti
+                        <img src="../../../../assets/imagenes/wolverine.png" class="d-block w-75" alt="Logan" class="rounded" />
+                    </p>
+                </div>
             </div>
         </div>
 
-        <div class="carousel-item">
-            <div class="product">
-                <p class="container">
-                    Ping no te saldras con la tuya...
-                    <img src="../../../../assets/imagenes/daredevil.png" class="d-block w-75" alt="BATMAN" class="rounded" />
-                </p>
-            </div>
-        </div>
-        <div class="carousel-item">
-            <div class="product">
-                <p class="container">
-                    Una linterna siempre alumbrara
-                    <img src="../../../../assets/imagenes/linterna-verde.png" class="d-block w-75" alt="BATMAN" class="rounded" />
-                </p>
-            </div>
-        </div>
-        <div class="carousel-item">
-            <div class="product">
-                <p class="container">
-                    Jenn volvere por ti
-                    <img src="../../../../assets/imagenes/wolverine.png" class="d-block w-75" alt="BATMAN" class="rounded" />
-                </p>
-            </div>
-        </div>
+        <p></p>
+
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
-</div>
+</body>
 
 <p>about works!</p>
