--- a/ANGULAR/spa/src/app/componentes/shared/info-heroe/info-heroe.component.html
+++ b/ANGULAR/spa/src/app/componentes/shared/info-heroe/info-heroe.component.html
@@ -4,7 +4,7 @@
     <small>({{ heroe.aparicion | date: "Y" }})</small>
 </h1>
 <hr />
-<div class="rpw animated fadeIn">
+<div class="row animated fadeIn">
     <div class="col-md-4">
         <img [src]="heroe.img" class="img-fluid" [alt]="heroe.Nombre" />
         <br />
