--- a/ANGULAR/spa/src/app/componentes/shared/about/about.component.css
+++ b/ANGULAR/spa/src/app/componentes/shared/about/about.component.css
@@ -1,3 +1,21 @@
 .product {
     border: #221212 3px solid;
 }
+
+body {
+    background-color: lightblue;
+}
+
+.text-block {
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    color: black;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    text-align: justify;
+    top: 120px;
+}
